// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the right interface for anonymous user 1`] = `
<li>
  <a
    href="#"
    onClick={[Function]}
  >
    layout.login
  </a>
</li>
`;

exports[`should render the right interface for logged in user 1`] = `
<li
  className="dropdown js-user-authenticated open"
>
  <a
    className="dropdown-toggle navbar-avatar"
    href="#"
    onClick={[Function]}
  >
    <Connect(Avatar)
      email="foo@bar.baz"
      name="foo"
      size={24}
    />
  </a>
  <ul
    className="dropdown-menu dropdown-menu-right"
  >
    <li>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/account"
      >
        my_account.page
      </Link>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        layout.logout
      </a>
    </li>
  </ul>
</li>
`;

exports[`should render the users organizations 1`] = `
<li
  className="dropdown js-user-authenticated open"
>
  <a
    className="dropdown-toggle navbar-avatar"
    href="#"
    onClick={[Function]}
  >
    <Connect(Avatar)
      email="foo@bar.baz"
      name="foo"
      size={24}
    />
  </a>
  <ul
    className="dropdown-menu dropdown-menu-right"
  >
    <li>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/account"
      >
        my_account.page
      </Link>
    </li>
    <li
      className="divider"
      role="separator"
    />
    <li
      className="dropdown-header spacer-left"
    >
      my_organizations
    </li>
    <li>
      <OrganizationLink
        organization={
          Object {
            "key": "bar",
            "name": "bar",
          }
        }
      >
        <span
          className="spacer-left"
        >
          bar
        </span>
      </OrganizationLink>
    </li>
    <li>
      <OrganizationLink
        organization={
          Object {
            "key": "foo",
            "name": "Foo",
          }
        }
      >
        <span
          className="spacer-left"
        >
          Foo
        </span>
      </OrganizationLink>
    </li>
    <li>
      <OrganizationLink
        organization={
          Object {
            "key": "myorg",
            "name": "MyOrg",
          }
        }
      >
        <span
          className="spacer-left"
        >
          MyOrg
        </span>
      </OrganizationLink>
    </li>
    <li
      className="divider"
      role="separator"
    />
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        layout.logout
      </a>
    </li>
  </ul>
</li>
`;

exports[`should update the component correctly when the user changes to anonymous 1`] = `
<li
  className="dropdown js-user-authenticated open"
>
  <a
    className="dropdown-toggle navbar-avatar"
    href="#"
    onClick={[Function]}
  >
    <Connect(Avatar)
      email="foo@bar.baz"
      name="foo"
      size={24}
    />
  </a>
  <ul
    className="dropdown-menu dropdown-menu-right"
  >
    <li>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/account"
      >
        my_account.page
      </Link>
    </li>
    <li>
      <a
        href="#"
        onClick={[Function]}
      >
        layout.logout
      </a>
    </li>
  </ul>
</li>
`;

exports[`should update the component correctly when the user changes to anonymous 2`] = `
<li>
  <a
    href="#"
    onClick={[Function]}
  >
    layout.login
  </a>
</li>
`;
